--- a/Tutorials/1.Setup.md
+++ b/Tutorials/1.Setup.md
@@ -45,9 +45,7 @@ git --version
 
 ---
 
-## 3. Install GitHub Desktop
-
-### Install GitHub Desktop (deb package)
+## 3. Install GitHub Desktop (deb package)
 
 Link: https://linuxcapable.com/how-to-install-github-desktop-on-ubuntu-linux/
 
@@ -78,8 +76,6 @@ code
 
 ## 5. Install Gazebo Fortress 
 
-### Option A: Gazebo Fortress
-
 ```bash
 sudo sh -c 'echo "deb [arch=$(dpkg --print-architecture)] http://packages.osrfoundation.org/gazebo/ubuntu-stable    $(lsb_release -cs) main" > /etc/apt/sources.list.d/gazebo-stable.list'
 wget https://packages.osrfoundation.org/gazebo.key -O - | sudo apt-key add -
@@ -106,7 +102,7 @@ This installs dependencies, PX4 build tools, and Gazebo.
 
 ## 7. Install QGroundControl
 
-Link: 
+Link: https://docs.qgroundcontrol.com/master/en/qgc-user-guide/getting_started/download_and_install.html
 
 Download AppImage and make it executable:
 
