--- a/Tutorials/2.PX4.md
+++ b/Tutorials/2.PX4.md
@@ -1,1 +1,131 @@
+# Set Up PX4-ROS2 Communication
+
+![PX4-ROS2 Pipeline][https://docs.px4.io/v1.15/assets/architecture_xrce-dds_ros2.DXSOuyOh.svg]
+
+Explanation: PX4’s uORB (internal pub/sub) ↔ micro XRCE-DDS client (on the flight controller) ⇄ transport (serial / UDP / TCP / custom) ⇄ micro XRCE-DDS agent (on the companion computer) ⇄ Fast-DDS (DDS middleware) ⇄ ROS 2 nodes.
+
+---
+
+## 1. Install Fast CDR 
+
+The version that matches ROS 2 Humble is 1.0.24.
+
+```bash
+cd ~/ctuav_gazebo-research
+git clone https://github.com/eProsima/Fast-CDR.git -b v1.0.24
+cd Fast-CDR && mkdir build && cd build
+cmake ..
+make -j$(nproc)
+sudo make install
+```
+
+
+---
+
+## 2. Install Fast DDS
+
+The version that matches ROS 2 Humble is v2.6.6.
+
+```bash
+cd ~/ctuav_gazebo-research
+git clone https://github.com/eProsima/Fast-DDS.git -b v2.6.6
+cd Fast-DDS && mkdir build && cd build
+cmake ..
+make -j$(nproc)
+sudo make install
+```
+
+---
+
+## 3. Install Micro XRCE-DDS
+
+```bash
+git clone -b v2.4.2 https://github.com/eProsima/Micro-XRCE-DDS-Agent.git
+cd Micro-XRCE-DDS-Agent
+mkdir build
+cd build
+cmake ..
+make
+sudo make install
+sudo ldconfig /usr/local/lib/
+```
+
+### Build workspace:
+```bash
+cd ~/ctuav_gazebo-research
+mkdir src && cd src
+colcon build --symlink-install
+```
+
+
+### Add commands into a bash file:
+
+```bash
+nano ~/.bashrc
+```
+
+Scroll to the bottom of the file and add:
+
+```bash
+# Source ROS 2 Humble
+source /opt/ros/humble/setup.bash
+
+# Source PX4 workspace
+source ~/ctuav_gazebo-research/install/setup.bash
+```
+
+After saving (CTRL+O, Enter, CTRL+X in nano), reload it:
+
+```bash
+source ~/.bashrc
+```
+
+---
+
+## 4. Test
+
+Run PX4-Gazebo simulation (Start the Client):
+
+The PX4 simulator starts the uXRCE-DDS client automatically, connecting to UDP port 8888 on the local host.
+
+```bash
+cd ctuav_gazebo-research/PX4-Autopilot/
+make px4_sitl gz_x500
+```
+
+More vehicle and world models: https://docs.px4.io/v1.15/en/sim_gazebo_gz/
+
+
+Start the agent:
+
+```bash
+MicroXRCEAgent udp4 -p 8888
+```
+
+> **Note:** Only one agent is allowed per connection channel.
+
+Launch an example:
+
+```bash
+ros2 launch px4_ros_com sensor_combined_listener.launch.py
+```
+
+If this is working you should see data being printed on the terminal/console where you launched the ROS listener:
+
+```bash
+RECEIVED DATA FROM SENSOR COMBINED
+================================
+ts: 870938190
+gyro_rad[0]: 0.00341645
+gyro_rad[1]: 0.00626475
+gyro_rad[2]: -0.000515705
+gyro_integral_dt: 4739
+accelerometer_timestamp_relative: 0
+accelerometer_m_s2[0]: -0.273381
+accelerometer_m_s2[1]: 0.0949186
+accelerometer_m_s2[2]: -9.76044
+accelerometer_integral_dt: 4739
+```
+
+---
 
