Update PX4.md and .gitignore

--- a/Tutorials/2.PX4.md
+++ b/Tutorials/2.PX4.md
@@ -127,5 +127,9 @@ accelerometer_m_s2[2]: -9.76044
 accelerometer_integral_dt: 4739
 ```
 
+> **Note:** All the topics used on the uXRCE-DDS client: https://github.com/PX4/PX4-Autopilot/blob/release/1.15/src/modules/uxrce_dds_client/dds_topics.yaml
+
+
+
 ---
 
