--- a/Tutorials/1.Setup.md
+++ b/Tutorials/1.Setup.md
@@ -88,6 +88,8 @@ Check by running the default simulated environment:
 ign gazebo shapes.sdf
 ```
 
+> **Note:** This step is unnecessary because PX4-Gazebo simulation automatically install and run Gazebo Harmonic.
+
 ## 6. Install PX4
 
 ```bash
