--- a/Tutorials/2.PX4.md
+++ b/Tutorials/2.PX4.md
@@ -2,7 +2,7 @@
 
 ![PX4-ROS2 Pipeline](https://docs.px4.io/v1.15/assets/architecture_xrce-dds_ros2.DXSOuyOh.svg)
 
-Explanation: PX4’s uORB (internal pub/sub) ↔ micro XRCE-DDS client (on the flight controller) ⇄ transport (serial / UDP / TCP / custom) ⇄ micro XRCE-DDS agent (on the companion computer) ⇄ Fast-DDS (DDS middleware) ⇄ ROS 2 nodes.
+**Explanation:** : PX4’s uORB (internal pub/sub) ↔ micro XRCE-DDS client (on the flight controller) ⇄ transport (serial / UDP / TCP / custom) ⇄ micro XRCE-DDS agent (on the companion computer) ⇄ Fast-DDS (DDS middleware) ⇄ ROS 2 nodes.
 
 ---
 
