--- a/Tutorials/1.Setup.md
+++ b/Tutorials/1.Setup.md
@@ -102,7 +102,24 @@ This installs dependencies, PX4 build tools, and Gazebo.
 
 ---
 
-## 7. Install QGroundControl
+## 7. Install MAVROS
+
+
+```bash
+sudo apt update
+sudo apt install ros-humble-mavros ros-humble-mavros-extras
+```
+
+Install GeographicLib datasets (required for GPS conversions):
+
+```bash
+wget https://raw.githubusercontent.com/mavlink/mavros/master/mavros/scripts/install_geographiclib_datasets.sh
+chmod +x install_geographiclib_datasets.sh
+sudo ./install_geographiclib_datasets.sh
+```
+
+---
+## 8. Install QGroundControl
 
 Link: https://docs.qgroundcontrol.com/master/en/qgc-user-guide/getting_started/download_and_install.html
 
@@ -123,3 +140,4 @@ sudo apt install libxcb-xinerama0 libxkbcommon-x11-0 libxcb-cursor-dev -y
 ```
 
 ---
+
