--- a/Tutorials/2.PX4.md
+++ b/Tutorials/2.PX4.md
@@ -110,6 +110,9 @@ Launch an example:
 ros2 launch px4_ros_com sensor_combined_listener.launch.py
 ```
 
+> **Note:** uORB Message Format: https://docs.px4.io/v1.15/en/msg_docs/
+
+
 If this is working you should see data being printed on the terminal/console where you launched the ROS listener:
 
 ```bash
