--- a/Tutorials/3.Get_Odometry_data.md
+++ b/Tutorials/3.Get_Odometry_data.md
@@ -1,8 +1,6 @@
-# Get Odometry + GPS data from one drone 
+# Get Odometry data from one drone 
 
 ---
-
-## 1. Get odometry data from PX4
 
 ### Start the Client (Run PX4-Gazebo simulation):
 
