--- a/Tutorials/1.Setup.md
+++ b/Tutorials/1.Setup.md
@@ -121,6 +121,9 @@ sudo ./install_geographiclib_datasets.sh
 ---
 ## 8. Install QGroundControl
 
+### Normal version
+
+
 Link: https://docs.qgroundcontrol.com/master/en/qgc-user-guide/getting_started/download_and_install.html
 
 Download AppImage and make it executable:
@@ -138,6 +141,11 @@ sudo apt install libfuse2 -y
 sudo apt install libxcb-xinerama0 libxkbcommon-x11-0 libxcb-cursor-dev -y
 
 ```
+
+
+### Dev version (recommended)
+
+...
 
 ---
 
