Add multi.sdf world file

--- a/Tutorials/2.PX4.md
+++ b/Tutorials/2.PX4.md
@@ -88,9 +88,19 @@ Run PX4-Gazebo simulation (Start the Client):
 
 The PX4 simulator starts the uXRCE-DDS client automatically, connecting to UDP port 8888 on the local host.
 
+
+Run simulation with model x500 in default world:
+
 ```bash
 cd ctuav_gazebo-research/PX4-Autopilot/
 make px4_sitl gz_x500
+```
+
+Run simulation with model x500 in baylands world:
+
+```bash
+cd ctuav_gazebo-research/PX4-Autopilot/
+PX4_GZ_WORLD=baylands make px4_sitl gz_x500
 ```
 
 More vehicle and world models: https://docs.px4.io/v1.15/en/sim_gazebo_gz/
