--- a/Tutorials/6.Multi.md
+++ b/Tutorials/6.Multi.md
@@ -24,13 +24,17 @@ Terminal 3:
 
 ```bash
 cd ~/ctuav_gazebo-research/PX4-Autopilot/
-PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4003 PX4_GZ_MODEL_POSE="0,4" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 
+PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4003 PX4_GZ_MODEL_POSE="0,4" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 3
 ```
 
 More vehicle and world models: https://docs.px4.io/v1.15/en/sim_gazebo_gz/
 
 
-=> Create one file?
+Note: This way didnt work because spawning the third drone having the same model (even gz_x500_vision or _depth) will lead the 
+first drone to be able to activate one rotor. when arm, it fall :D
+
+
+=> Create one .world file
 
 
 
