--- a/Tutorials/6.Multi.md
+++ b/Tutorials/6.Multi.md
@@ -4,7 +4,12 @@
 
 ### Start the PX4-Gazebo Simulation 
 
-Spawn 3 drones in one Gazebo instance
+Spawn 4 drones in one Gazebo instance
+
+> **Note:** Run this command in each terminal to avoid CPU/GPU overload:
+```bash
+export PX4_SIM_SPEED_FACTOR=0.4
+```
 
 Terminal 1:
 
@@ -27,15 +32,17 @@ cd ~/ctuav_gazebo-research/PX4-Autopilot/
 PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="0,4" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 3
 ```
 
+Terminal 4:
+
+```bash
+cd ~/ctuav_gazebo-research/PX4-Autopilot/
+PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="0,6" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 4
+```
+
 More vehicle and world models: https://docs.px4.io/v1.15/en/sim_gazebo_gz/
 
 
-Note: This way didnt work because spawning the third drone having the same model (even gz_x500_vision or _depth) will lead the 
-first drone to be able to activate one rotor. when arm, it fall :D
-
-
-=> Create one .world file
-
+=> Create a bash file: ...
 
 
 
