--- a/Tutorials/6.Multi.md
+++ b/Tutorials/6.Multi.md
@@ -14,6 +14,7 @@ export PX4_SIM_SPEED_FACTOR=0.4
 Terminal 1:
 
 ```bash
+export PX4_SIM_SPEED_FACTOR=0.4
 cd ~/ctuav_gazebo-research/PX4-Autopilot/
 PX4_SYS_AUTOSTART=4001 PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 1
 ```
@@ -21,6 +22,7 @@ PX4_SYS_AUTOSTART=4001 PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i
 Terminal 2:
 
 ```bash
+export PX4_SIM_SPEED_FACTOR=0.4
 cd ~/ctuav_gazebo-research/PX4-Autopilot/
 PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="0,2" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 2
 ```
@@ -28,6 +30,7 @@ PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="0,2" PX4_SIM_MODEL
 Terminal 3:
 
 ```bash
+export PX4_SIM_SPEED_FACTOR=0.4
 cd ~/ctuav_gazebo-research/PX4-Autopilot/
 PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="0,4" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 3
 ```
@@ -35,6 +38,7 @@ PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="0,4" PX4_SIM_MODEL
 Terminal 4:
 
 ```bash
+export PX4_SIM_SPEED_FACTOR=0.4
 cd ~/ctuav_gazebo-research/PX4-Autopilot/
 PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="0,6" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 4
 ```
@@ -42,8 +46,12 @@ PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="0,6" PX4_SIM_MODEL
 More vehicle and world models: https://docs.px4.io/v1.15/en/sim_gazebo_gz/
 
 
-=> Create a bash file: ...
+=> Create a bash script for convience: 
+```bash
+~/multi.sh
+```
 
+> **Note:** Not recommended because this approach is prone to errors.
 
 
 ### Start QGroundControl and start drone's missions:
