--- a/Tutorials/7.Offboard.md
+++ b/Tutorials/7.Offboard.md
@@ -8,8 +8,8 @@ Spawn 4 drones in one Gazebo instance
 
 
 ```bash
-cd ~/ctuav_gazebo-research/PX4-Autopilot/
-PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="0,6" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 4
+cd ctuav_gazebo-research/PX4-Autopilot/
+make px4_sitl gz_x500
 ```
 
 
