Update markdown for offboard control

--- a/Tutorials/6.Multi.md
+++ b/Tutorials/6.Multi.md
@@ -65,6 +65,7 @@ cd ~/ctuav_gazebo-research/Custom_QGC/qgroundcontrol
 ### Launch MAVROS
 
 ```bash
+source install/setup.bash
 ros2 launch mavros multi_uas.launch
 ```
 
