--- a/Tutorials/7.Offboard.md
+++ b/Tutorials/7.Offboard.md
@@ -6,10 +6,41 @@
 
 Spawn 4 drones in one Gazebo instance
 
+> **Note:** Run this command in each terminal to avoid CPU/GPU overload:
+```bash
+export PX4_SIM_SPEED_FACTOR=0.4
+```
+
+Terminal 1:
 
 ```bash
-cd ctuav_gazebo-research/PX4-Autopilot/
-make px4_sitl gz_x500
+export PX4_SIM_SPEED_FACTOR=0.4
+cd ~/ctuav_gazebo-research/PX4-Autopilot/
+PX4_SYS_AUTOSTART=4001 PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 1
+```
+
+Terminal 2:
+
+```bash
+export PX4_SIM_SPEED_FACTOR=0.4
+cd ~/ctuav_gazebo-research/PX4-Autopilot/
+PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="0,2" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 2
+```
+
+Terminal 3:
+
+```bash
+export PX4_SIM_SPEED_FACTOR=0.4
+cd ~/ctuav_gazebo-research/PX4-Autopilot/
+PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="0,4" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 3
+```
+
+Terminal 4:
+
+```bash
+export PX4_SIM_SPEED_FACTOR=0.4
+cd ~/ctuav_gazebo-research/PX4-Autopilot/
+PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="0,6" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 4
 ```
 
 
@@ -21,22 +52,54 @@ cd ~/ctuav_gazebo-research/Custom_QGC/qgroundcontrol
 ```
 
 ### Start the agent  
+You only need one agent for all vehicles (it will handle multiple clients over UDP).
+
 
 ```bash
 MicroXRCEAgent udp4 -p 8888
 ```
 
-### Launch MAVROS
+> **Note:** Wait until all clients finish creating all necessary topics.
+
+<!-- ### Launch MAVROS
 
 ```bash
 ros2 launch mavros multi_uas.launch
-```
+``` -->
 
+## Launch offboard_control node for each drone
 
-## Launch offboard_control node
+### a. Hover 5m above the assigned position:
+
+Terminal 1:
 
 ```bash
-ros2 run px4_ros_com offboard_control
+ros2 run px4_ros_com offboard_multi --ros-args -p ns:=/px4_1 -p target_system:=2
 ```
 
+Terminal 2:
+
+```bash
+ros2 run px4_ros_com offboard_multi --ros-args -p ns:=/px4_2 -p target_system:=3
+```
+
+Terminal 3:
+
+```bash
+ros2 run px4_ros_com offboard_multi --ros-args -p ns:=/px4_3 -p target_system:=4
+```
+
+Terminal 4:
+
+```bash
+ros2 run px4_ros_com offboard_multi --ros-args -p ns:=/px4_4 -p target_system:=5
+```
+
+
+
+<!-- colcon build --symlink-install --packages-select px4_msgs mavlink mavros_msgs px4_ros_com -->
+
+
+
 ---
+
