--- a/Tutorials/7.Offboard.md
+++ b/Tutorials/7.Offboard.md
@@ -16,7 +16,7 @@ Terminal 1:
 ```bash
 export PX4_SIM_SPEED_FACTOR=0.4
 cd ~/ctuav_gazebo-research/PX4-Autopilot/
-PX4_SYS_AUTOSTART=4001 PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 1
+PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="-4,4,0" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 1
 ```
 
 Terminal 2:
@@ -24,7 +24,7 @@ Terminal 2:
 ```bash
 export PX4_SIM_SPEED_FACTOR=0.4
 cd ~/ctuav_gazebo-research/PX4-Autopilot/
-PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="0,2" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 2
+PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="4,4,0" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 2
 ```
 
 Terminal 3:
@@ -32,7 +32,7 @@ Terminal 3:
 ```bash
 export PX4_SIM_SPEED_FACTOR=0.4
 cd ~/ctuav_gazebo-research/PX4-Autopilot/
-PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="0,4" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 3
+PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="-4,-4,0" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 3
 ```
 
 Terminal 4:
@@ -40,7 +40,7 @@ Terminal 4:
 ```bash
 export PX4_SIM_SPEED_FACTOR=0.4
 cd ~/ctuav_gazebo-research/PX4-Autopilot/
-PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="0,6" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 4
+PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="4,-4,0" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 4
 ```
 
 
@@ -64,6 +64,7 @@ MicroXRCEAgent udp4 -p 8888
 <!-- ### Launch MAVROS
 
 ```bash
+source install/setup.bash
 ros2 launch mavros multi_uas.launch
 ``` -->
 
