Fix QoS mismatch

--- a/Tutorials/7.Offboard.md
+++ b/Tutorials/7.Offboard.md
@@ -61,16 +61,18 @@ MicroXRCEAgent udp4 -p 8888
 
 > **Note:** Wait until all clients finish creating all necessary topics.
 
-<!-- ### Launch MAVROS
+### Launch MAVROS
 
 ```bash
 source install/setup.bash
 ros2 launch mavros multi_uas.launch
-``` -->
+```
 
 ## Launch offboard_control node for each drone
 
 ### a. Hover 5m above the assigned position:
+
+> **Note:** This node does not need to activate MAVROS.
 
 Terminal 1:
 
