Pass the fcu_url argument in multi_uas.launch

--- a/Tutorials/7.Offboard.md
+++ b/Tutorials/7.Offboard.md
@@ -102,7 +102,33 @@ ros2 run px4_ros_com offboard_multi --ros-args -p ns:=/px4_4 -p target_system:=5
 
 <!-- colcon build --symlink-install --packages-select px4_msgs mavlink mavros_msgs px4_ros_com -->
 
+### b. Subscribe to MARVOS GPS & IMU topics 
 
+
+
+Terminal 1:
+
+```bash
+ros2 run px4_ros_com offboard_swarm --ros-args -p ns:=/px4_1 -p target_system:=2
+```
+
+Terminal 2:
+
+```bash
+ros2 run px4_ros_com offboard_swarm --ros-args -p ns:=/px4_2 -p target_system:=3
+```
+
+Terminal 3:
+
+```bash
+ros2 run px4_ros_com offboard_swarm --ros-args -p ns:=/px4_3 -p target_system:=4
+```
+
+Terminal 4:
+
+```bash
+ros2 run px4_ros_com offboard_swarm --ros-args -p ns:=/px4_4 -p target_system:=5
+``
 
 ---
 
