Update waypoints for offboard program

--- a/Tutorials/6.Multi.md
+++ b/Tutorials/6.Multi.md
@@ -11,12 +11,16 @@ Spawn 4 drones in one Gazebo instance
 export PX4_SIM_SPEED_FACTOR=0.4
 ```
 
+> **Note:** Multi-Vehicle Simulation with ROS 2 (PX4 docs): https://docs.px4.io/main/en/ros2/multi_vehicle
+
+
+
 Terminal 1:
 
 ```bash
 export PX4_SIM_SPEED_FACTOR=0.4
 cd ~/ctuav_gazebo-research/PX4-Autopilot/
-PX4_SYS_AUTOSTART=4001 PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 1
+PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="-4,4,0" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 0
 ```
 
 Terminal 2:
@@ -24,7 +28,7 @@ Terminal 2:
 ```bash
 export PX4_SIM_SPEED_FACTOR=0.4
 cd ~/ctuav_gazebo-research/PX4-Autopilot/
-PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="0,2" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 2
+PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="4,4,0" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 1
 ```
 
 Terminal 3:
@@ -32,7 +36,7 @@ Terminal 3:
 ```bash
 export PX4_SIM_SPEED_FACTOR=0.4
 cd ~/ctuav_gazebo-research/PX4-Autopilot/
-PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="0,4" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 3
+PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="-4,-4,0" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 2
 ```
 
 Terminal 4:
@@ -40,7 +44,7 @@ Terminal 4:
 ```bash
 export PX4_SIM_SPEED_FACTOR=0.4
 cd ~/ctuav_gazebo-research/PX4-Autopilot/
-PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="0,6" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 4
+PX4_GZ_STANDALONE=1 PX4_SYS_AUTOSTART=4001 PX4_GZ_MODEL_POSE="4,-4,0" PX4_SIM_MODEL=gz_x500 ./build/px4_sitl_default/bin/px4 -i 3
 ```
 
 More vehicle and world models: https://docs.px4.io/v1.15/en/sim_gazebo_gz/
