--- a/Tutorials/8.Collision_avoidance.md
+++ b/Tutorials/8.Collision_avoidance.md
@@ -1,4 +1,4 @@
-# Offboard Mode 
+# Collision Avoidance 
 
 ---
 
@@ -70,41 +70,6 @@ ros2 launch mavros multi_uas.launch
 
 ## Launch offboard_control node for each drone
 
-### a. Hover 5m above the assigned position:
-
-> **Note:** This node does not need to activate MAVROS.
-
-Terminal 1:
-
-```bash
-ros2 run px4_ros_com offboard_multi --ros-args -p ns:=/px4_1 -p target_system:=2
-```
-
-Terminal 2:
-
-```bash
-ros2 run px4_ros_com offboard_multi --ros-args -p ns:=/px4_2 -p target_system:=3
-```
-
-Terminal 3:
-
-```bash
-ros2 run px4_ros_com offboard_multi --ros-args -p ns:=/px4_3 -p target_system:=4
-```
-
-Terminal 4:
-
-```bash
-ros2 run px4_ros_com offboard_multi --ros-args -p ns:=/px4_4 -p target_system:=5
-```
-
-
-
-<!-- colcon build --symlink-install --packages-select px4_msgs mavlink mavros_msgs px4_ros_com -->
-
-### b. Same as a.  + Subscribe to MARVOS GPS & IMU topics of other drones:
-
-
 Terminal 1:
 
 ```bash
@@ -120,7 +85,8 @@ ros2 run px4_ros_com offboard_swarm --ros-args -p ns:=/px4_1 -p target_system:=2
 Terminal 3:
 
 ```bash
-d```
+ros2 run px4_ros_com offboard_swarm --ros-args -p ns:=/px4_2 -p target_system:=3
+```
 
 Terminal 4:
 
