Add collision avoidance node

--- a/Tutorials/7.Offboard.md
+++ b/Tutorials/7.Offboard.md
@@ -111,6 +111,16 @@ Terminal 1:
 ros2 run px4_ros_com offboard_swarm --ros-args -p target_system:=1
 ```
 
+ros2 run px4_ros_com offboard_multi --ros-args -p ns:=/px4_3 -p target_system:=4 -p hover_x:=0.0 -p hover_y:=17.0 -p hover_z:=-5.0 
+
+
+ros2 run px4_ros_com offboard_multi --ros-args -p ns:=/px4_1 -p target_system:=2 -p hover_x:=0.0 -p hover_y:=-17.0 -p hover_z:=-5.0 
+
+
+
+
+
+
 Terminal 2:
 
 ```bash
